tests/baselines/reference/exportNonVisibleType.errors.txt
tests/cases/conformance/externalModules/foo1.ts(7,1): error TS1148: Cannot compile modules unless the '--module' flag is provided. Consider setting the 'module' compiler option in a 'tsconfig.json' file.


==== tests/cases/conformance/externalModules/foo1.ts (1 errors) ====
    interface I1 {
    	a: string;
    	b: number;
    }
    
    var x: I1 = {a: "test", b: 42};
    export = x; // Should fail, I1 not exported.
    ~~~~~~~~~~~
!!! error TS1148: Cannot compile modules unless the '--module' flag is provided. Consider setting the 'module' compiler option in a 'tsconfig.json' file.
    
    
==== tests/cases/conformance/externalModules/foo2.ts (0 errors) ====
    interface I1 {
    	a: string;
    	b: number;
    }
    
    class C1 {
    	m1: I1;
    }
    
    export = C1; // Should fail, type I1 of visible member C1.m1 not exported.
    
==== tests/cases/conformance/externalModules/foo3.ts (0 errors) ====
    interface I1 {
    	a: string;
    	b: number;
    }
    
    class C1 {
    	private m1: I1;
    }
    
    export = C1; // Should work, private type I1 of visible class C1 only used in private member m1.
    